@@ -1,3 +1,11 @@
+2006-01-29  Eric Seidel  <eseidel@apple.com>
+
+        Reviewed by darin.
+
+        Fix the build by applying a GCC-specific namespace hack.
+
+        * kjs/lookup.h:
+
 2006-01-29  Eric Seidel <eseidel@apple.com>
 
         Reviewed by hyatt.
